--- a/.github/workflows/tf-plan-apply.yml
+++ b/.github/workflows/tf-plan-apply.yml
@@ -3,10 +3,10 @@ name: 'Terraform Plan/Apply'
 on:
   push:
     branches:
-    - main
+    - dev
   pull_request:
     branches:
-    - main
+    - dev
 
 #Special permissions required for OIDC authentication
 permissions:
