--- a/.github/workflows/tf-unit-tests.yml
+++ b/.github/workflows/tf-unit-tests.yml
@@ -2,7 +2,8 @@ name: 'Terraform Unit Tests'
 
 on:
   push:
-
+  workflow_dispatch:
+  
 jobs:
   terraform-unit-tests:
     name: 'Terraform Unit Tests'
