--- a/.github/workflows/tf-unit-tests.yml
+++ b/.github/workflows/tf-unit-tests.yml
@@ -3,7 +3,12 @@ name: 'Terraform Unit Tests'
 on:
   push:
   workflow_dispatch:
-  
+    inputs:
+        port_payload:
+          required: true
+          description: Port's payload, including details for who triggered the action and
+            general context (blueprint, run id, etc...)
+          type: string
 jobs:
   terraform-unit-tests:
     name: 'Terraform Unit Tests'
