--- a/.github/workflows/portCreateRepo.yaml
+++ b/.github/workflows/portCreateRepo.yaml
@@ -21,7 +21,7 @@ jobs:
       ORG_NAME: ChandramohanG
     runs-on: ubuntu-latest
     steps:
-      - uses: port-labs/cookiecutter-gha@v1
+      - uses: port-labs/cookiecutter-gha@v1.1
         id: scaff
         with:
           portClientId: ${{ secrets.PORT_CLIENT_ID }}
@@ -29,7 +29,7 @@ jobs:
           token: ${{ secrets.ORG_ADMIN_TOKEN }}
           portRunId: ${{ fromJson(inputs.port_payload).context.runId }}
           repositoryName: ${{ fromJson(inputs.port_payload).payload.properties.service_name }}
-          portUserInputs: '{"cookiecutter_app_name": "${{ fromJson(inputs.port_payload).payload.properties.service_name }}" }'
+          portUserInputs: ${{ toJson(fromJson(inputs.port_payload).payload.properties) }}
           cookiecutterTemplate: https://github.com/lacion/cookiecutter-golang
           blueprintIdentifier: "service"
           organizationName: ${{ env.ORG_NAME }}
